# deffillama-scrape

./: .env  .gitignore  README.md  dockerfile  pyproject.toml
docs/: chains.csv
src/: README.md  config.py  main.py
src/loaders/: base.py  csv_loader.py
src/parsers/: base.py  chain_parser.py
src/repositories/: base.py  chain.py
src/schemas/: base.py  chains.py
src/services/: base.py  scrape_chain.py
