[tool.poetry]
name = "defillama-scrape"
version = "0.1.0"
description = ""
authors = ["Hellsius <vlkolohat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
schedule = "^1.2.2"
selenium = "^4.23.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
